--- a/tools/actions/composites/setup-test-desktop/action.yml
+++ b/tools/actions/composites/setup-test-desktop/action.yml
@@ -13,6 +13,9 @@ inputs:
   install_node_gyp:
     description: "install node-gyp"
     required: false
+  install_playwright:
+    description: "install playwright"
+    required: false
 
 runs:
   using: "composite"
@@ -43,6 +46,7 @@ runs:
       run: pnpm i --filter="ledger-live-desktop..." --filter="ledger-live" --filter="dummy-live-app" --frozen-lockfile --unsafe-perm
       shell: bash
     - name: Install playwright dependencies
+      if: ${{ inputs.install_playwright }}
       run: npx playwright@1.27.1 install --with-deps chromium
       shell: bash
     - name: TurboRepo local caching server
