--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -63,17 +63,13 @@ jobs:
     env:
       NODE_OPTIONS: "--max-old-space-size=7168"
     steps:
-      - name: Job id
-        run: |
-          echo "${{ github.job }}"
-          echo "${{ github.run_id }}"
       - uses: actions/checkout@v3
         with:
           ref: ${{ inputs.ref || github.event.push.head.sha }}
       - name: Set git user
         run: |
           git config user.email "team-live@ledger.fr"
-          git config user.name "Team Live"
+          git config user.name "live-github-bot[bot]"
       - uses: pnpm/action-setup@v2
         with:
           version: latest
@@ -101,10 +97,6 @@ jobs:
     env:
       NODE_OPTIONS: "--max-old-space-size=7168"
     steps:
-      - name: Job id
-        run: |
-          echo "${{ github.job }}"
-          echo "${{ github.run_id }}"
       - uses: actions/checkout@v3
         with:
           ref: ${{ inputs.ref  || github.event.push.head.sha }}
@@ -117,7 +109,7 @@ jobs:
       - name: Set git user
         run: |
           git config user.email "team-live@ledger.fr"
-          git config user.name "Team Live"
+          git config user.name "live-github-bot[bot]"
       - uses: pnpm/action-setup@v2
         with:
           version: latest
@@ -149,7 +141,7 @@ jobs:
       - name: Set git user
         run: |
           git config user.email "team-live@ledger.fr"
-          git config user.name "Team Live"
+          git config user.name "live-github-bot[bot]"
       - uses: pnpm/action-setup@v2
         with:
           version: latest
