--- a/.github/workflows/bot-nonreg-nitrogen.yml
+++ b/.github/workflows/bot-nonreg-nitrogen.yml
@@ -1,4 +1,4 @@
-name: "[Bot] non-reg on develop with 'Phosphore'"
+name: "[Bot] non-reg on develop with 'Nitrogen'"
 on:
   schedule:
     - cron: "1 11 * * 2,4,6"
@@ -7,7 +7,7 @@ on:
       - develop
 
 concurrency:
-  group: bot-seed6
+  group: bot-seed7
 
 jobs:
   start-runner:
@@ -61,6 +61,6 @@ jobs:
         with:
           SHOW_LEGACY_NEW_ACCOUNT: "1"
           SLACK_API_TOKEN: ${{secrets.SLACK_API_TOKEN}}
-          SLACK_ICON_EMOJI: ":bot-seed6:"
-          SEED: ${{ secrets.SEED6 }}
+          SLACK_ICON_EMOJI: ":bot-seed7:"
+          SEED: ${{ secrets.SEED7 }}
           BOT_ENVIRONMENT: production
