--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ledgerhq/live-cli",
-  "version": "22.6.2",
+  "version": "22.6.3-hotfix.0",
   "description": "ledger-live CLI version",
   "repository": {
     "type": "git",
