--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -42,10 +42,16 @@
     }
   },
   "exports": {
+    "./lib/*/": "./lib/*/index.js",
     "./lib/*": "./lib/*.js",
     "./lib/*.js": "./lib/*.js",
+    "./lib-es/*/": "./lib-es/*/index.js",
     "./lib-es/*": "./lib-es/*.js",
     "./lib-es/*.js": "./lib-es/*.js",
+    "./*/": {
+      "require": "./lib/*/index.js",
+      "default": "./lib-es/*/index.js"
+    },
     "./*": {
       "require": "./lib/*.js",
       "default": "./lib-es/*.js"
@@ -77,6 +83,7 @@
   },
   "files": [
     "lib",
+    "lib-es",
     "src",
     "react.js",
     "reactNative.js"
