--- a/.github/workflows/gate.yml
+++ b/.github/workflows/gate.yml
@@ -3,6 +3,11 @@ run-name: "@Gate triggered by ${{ github.actor }} ${{ format('on branch {0}', gi
 
 on:
   pull_request:
+    branches:
+      - develop
+      - main
+      - release
+      - hotfix
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
