--- a/.github/workflows/build-desktop-external.yml
+++ b/.github/workflows/build-desktop-external.yml
@@ -10,6 +10,8 @@ on:
       login:
         description: The GitHub username that triggered the workflow
         required: true
+      base_ref:
+        description: The base branch to merge the head into when checking out the code
 
 concurrency:
   group: ${{ github.workflow }}-${{ inputs.ref }}
@@ -42,9 +44,10 @@ jobs:
             } else if ("${{ matrix.os }}" === "windows-latest") {
               return "win"
             }
-      - uses: actions/checkout@v3
+      - uses: LedgerHQ/ledger-live/tools/actions/composites/checkout-merge@develop
         with:
-          ref: ${{ github.event.pull_request.head.sha || github.event.push.head.sha }}
+          ref: ${{ inputs.ref || github.event.push.head.sha }}
+          base: ${{ inputs.base_ref }}
       - name: Set git user
         run: |
           git config user.email "team-live@ledger.fr"
