--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,6 +75,8 @@ jobs:
         run: pnpm i --frozen-lockfile
       - name: build cli
         run: pnpm build:cli
+      - name: test cli
+        run: pnpm test --filter="live-cli"
       - name: get diff
         id: diff
         run: |
