--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -21,7 +21,8 @@
     "build": "tsc --project src/tsconfig.json",
     "prepublishOnly": "rm -rf lib && tsc --project src/tsconfig.json",
     "watch": "tsc --watch --project src/tsconfig.json",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "zx ./scripts/test.mjs"
   },
   "peerDependencies": {
     "@ledgerhq/hw-transport-node-ble": "workspace:^"
