fix: botTransfer has been fixed with more features
- possibility to filter specific coins
- ability to send part of the funds
- more resiliency on independent transactions
- fix the handling of speculos in case one of the first async call fails
- introduce a non-strict mode to enforce sending funds even if they don't match the 'expected value'
- introduce a way for elrond to send the tokens too

--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -295,6 +295,7 @@
     "typescript": "^4.8.3",
     "typescript-eslint-parser": "^22.0.0",
     "uuid": "^8.3.2",
-    "ws": "7"
+    "ws": "7",
+    "mkdirp": "*"
   }
 }
