ci: fix inputs context in concurrency field
the inputs context is unavailable in the currency part
the documentation seems to be wrong on this point
see: https://github.com/orgs/community/discussions/35341

--- a/.github/workflows/test-desktop-external.yml
+++ b/.github/workflows/test-desktop-external.yml
@@ -14,8 +14,9 @@ on:
         description: The base branch to merge the head into when checking out the code
 
 concurrency:
-  group: ${{ github.workflow }}-${{ inputs.ref }}
-  cancel-in-progress: ${{ inputs.ref != 'develop' }}
+  # See: https://github.com/orgs/community/discussions/35341
+  group: ${{ github.workflow }}-${{ github.event.inputs.ref }}
+  cancel-in-progress: ${{ github.event.inputs.ref != 'develop' }}
 
 jobs:
   typecheck:
