--- a/.github/workflows/regen-doc.yml
+++ b/.github/workflows/regen-doc.yml
@@ -18,7 +18,8 @@ on:
         required: false
 
 concurrency:
-  group: ${{ github.workflow }}-${{ inputs.ref || inputs.number }}
+  # See: https://github.com/orgs/community/discussions/35341
+  group: ${{ github.workflow }}-${{ github.event.inputs.ref || github.event.inputs.number }}
   cancel-in-progress: true
 
 jobs:
