--- a/apps/ledger-live-desktop/release-notes.json
+++ b/apps/ledger-live-desktop/release-notes.json
@@ -1,6 +1,6 @@
 [
   {
-    "tag_name": "2.51.0",
-    "body": "\n### 🚀 Features\n\n- Ledger Live is no longer compatible with Windows 7.\n\n### 🌷 Improvements\n\n- We've made some tweaks to improve the staking experience for Ethereum (ETH) and make it easier to select and access staking providers.\n"
+    "tag_name": "2.53.1",
+    "body": "\n### 🌷 Improvements\n\n- Following the latest TRON network update, we've raised the fee limit to 30 TRC to prevent failed transactions.\n\n### 🐛 Fixes\n\n- Accessing Ledger Live from market.ledger.com would cause the app to crash. We've fixed this.\n"
   }
 ]
