New InApp Browser to open cryptoPanic articles within the app

--- a/apps/ledger-live-mobile/android/build.gradle
+++ b/apps/ledger-live-mobile/android/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         ndkVersion = "21.4.7075529"
         kotlinVersion = "1.6.0"
         androidXCore = "1.6.0"
+        androidXAnnotation = "1.2.0"
+        androidXBrowser = "1.3.0"
         if (System.properties['os.arch'] == "aarch64") {
             // For M1 Users we need to use the NDK 24 which added support for aarch64
             ndkVersion = "24.0.8215888"
