--- a/apps/ledger-live-mobile/package.json
+++ b/apps/ledger-live-mobile/package.json
@@ -160,6 +160,7 @@
     "react-native-gesture-handler": "^2.5.0",
     "react-native-image-crop-tools": "^1.6.2",
     "react-native-image-picker": "4.8.5",
+    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^7.0.0",
     "react-native-level-fs": "^3.0.0",
