--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -21,7 +21,7 @@ on:
 
 concurrency:
   # See: https://github.com/orgs/community/discussions/35341
-  group: ${{ github.workflow }}-${{ github.event.inputs.ref || github.event.inputs.ref }}
+  group: ${{ github.workflow }}-${{ github.event.inputs.ref || github.ref }}
   cancel-in-progress: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.ref != 'develop' || github.ref_name != 'develop' }}
 
 jobs:
@@ -68,7 +68,7 @@ jobs:
     steps:
       - uses: LedgerHQ/ledger-live/tools/actions/composites/checkout-merge@develop
         with:
-          ref: ${{ inputs.ref || github.event.push.head.sha }}
+          ref: ${{ inputs.ref || github.sha }}
           base: ${{ inputs.base_ref }}
       - name: Set git user
         run: |
@@ -106,7 +106,7 @@ jobs:
           echo "C:\Program Files\Git\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
       - uses: LedgerHQ/ledger-live/tools/actions/composites/checkout-merge@develop
         with:
-          ref: ${{ inputs.ref || github.event.push.head.sha }}
+          ref: ${{ inputs.ref || github.sha }}
           base: ${{ inputs.base_ref }}
       - uses: actions/setup-dotnet@v2
         with:
@@ -141,7 +141,7 @@ jobs:
     steps:
       - uses: LedgerHQ/ledger-live/tools/actions/composites/checkout-merge@develop
         with:
-          ref: ${{ inputs.ref || github.event.push.head.sha }}
+          ref: ${{ inputs.ref || github.sha }}
           base: ${{ inputs.base_ref }}
           persist-credentials: false
       - name: Set git user
