--- a/apps/ledger-live-mobile/package.json
+++ b/apps/ledger-live-mobile/package.json
@@ -51,17 +51,12 @@
     "lint": "eslint src --ext .js,.json,.ts,.tsx --cache",
     "lint:fix": "pnpm lint --fix",
     "typecheck": "tsc --noEmit",
-    "test": "pnpm test:env",
+    "test": "pnpm test:jest && pnpm test:env",
+    "test:jest": "jest src --silent --ci --coverage --json --testLocationInResults",
     "test:env": "node ./scripts/mobile-env-md.mjs",
     "sync-locales": "./scripts/sync-locales.sh",
     "test-deep-links": "ws --spa ./deep-links-test-page.html",
     "download-hermes-profile": "zx ./scripts/download-hermes-profile.mjs"
-  },
-  "jest": {
-    "preset": "react-native",
-    "transform": {
-      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
-    }
   },
   "dependencies": {
     "@azure/core-asynciterator-polyfill": "^1.0.2",
@@ -207,9 +202,11 @@
     "@actions/core": "^1.5.0",
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.12.5",
     "@jest/reporters": "^29.3.1",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/jest-native": "^5.4.1",
     "@testing-library/react-native": "^11.5.2",
     "@types/color": "^3.0.3",
     "@types/d3-array": "~2.3.0",
@@ -268,6 +265,7 @@
     "react-native-flipper-performance-plugin": "^0.3.1",
     "react-native-performance": "^3.1.2",
     "react-native-performance-flipper-reporter": "^3.0.0",
+    "react-test-renderer": "^17.0.2",
     "strip-ansi": "6.0.1",
     "ts-jest": "^28.0.8",
     "typescript": "^4.8.3",
