--- a/apps/ledger-live-desktop/package.json
+++ b/apps/ledger-live-desktop/package.json
@@ -238,7 +238,7 @@
     "typescript": "^4.8.3",
     "url-loader": "^4.1.1",
     "v8-to-istanbul": "^8.1.0",
-    "vite": "4",
+    "vite": "^4.1.1",
     "vite-plugin-electron": "0.4.8",
     "yargs": "^15.3.1"
   }
