chore: update swift-bridge-hw-transport-ble description and docs

--- a/libs/ledgerjs/packages/swift-bridge-hw-transport-ble/package.json
+++ b/libs/ledgerjs/packages/swift-bridge-hw-transport-ble/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ledgerhq/swift-bridge-hw-transport-ble",
   "version": "6.31.0",
-  "description": "Ledger Hardware Wallet Bluetooth BLE transport for the Swift Native Module",
+  "description": "Package to expose the Swift BLE transport to JS",
   "keywords": [
     "Ledger",
     "LedgerWallet",
