--- a/apps/ledger-live-desktop/package.json
+++ b/apps/ledger-live-desktop/package.json
@@ -40,6 +40,7 @@
     "release": "node ./tools/dist --release -v",
     "test": "pnpm test:jest && pnpm test:playwright",
     "test:codecheck": "node ./tools/ci.js",
+    "jest": "jest",
     "test:jest": "jest src --silent --ci --coverage --json --testLocationInResults --outputFile=report.json",
     "test:playwright": "playwright test --config=tests/playwright.config.ts",
     "test:playwright:update-snapshots": "pnpm test:playwright --update-snapshots",
@@ -174,6 +175,8 @@
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
     "@storybook/react": "^6.3.12",
+    "@testing-library/react": "12",
+    "@testing-library/react-hooks": "^4.0.1",
     "@types/invariant": "^2.2.35",
     "@types/jest": "^28.1.6",
     "@types/lodash": "^4.14.182",
@@ -225,6 +228,8 @@
     "hasha": "^5.2.2",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jest": "^28.1.1",
+    "jest-environment-jsdom": "28",
+    "ts-jest": "^28.0.8",
     "listr": "^0.14.3",
     "listr-verbose-renderer": "^0.6.0",
     "native-modules-tools": "workspace:*",
