chore: update keywords

--- a/libs/ledgerjs/packages/swift-bridge-hw-app-eth/package.json
+++ b/libs/ledgerjs/packages/swift-bridge-hw-app-eth/package.json
@@ -5,8 +5,8 @@
   "keywords": [
     "Ledger",
     "LedgerWallet",
-    "NanoS",
-    "Blue",
+    "NanoX",
+    "Stax",
     "Hardware Wallet",
     "bluetooth",
     "swift",
