--- a/libs/ledgerjs/packages/swift-bridge-hw-app-solana/package.json
+++ b/libs/ledgerjs/packages/swift-bridge-hw-app-solana/package.json
@@ -14,12 +14,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/LedgerHQ/ledgerjs"
+    "url": "https://github.com/LedgerHQ/ledger-live"
   },
   "bugs": {
-    "url": "https://github.com/LedgerHQ/ledgerjs/issues"
+    "url": "https://github.com/LedgerHQ/ledger-live/issues"
   },
-  "homepage": "https://github.com/LedgerHQ/ledgerjs",
+  "homepage": "https://github.com/LedgerHQ/ledger-live",
   "publishConfig": {
     "access": "public"
   },
