--- a/apps/ledger-live-desktop/package.json
+++ b/apps/ledger-live-desktop/package.json
@@ -230,6 +230,7 @@
     "playwright": "1.27.1",
     "prebuild-install": "^7.0.0",
     "prettier": "^1.19.1",
+    "@testing-library/react": "^12.1.2",
     "react-refresh": "^0.11.0",
     "remove-flow-types-loader": "^1.1.0",
     "serve-handler": "^6.1.3",
