--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -115,12 +115,12 @@
     "@celo/utils": "^3.0.1",
     "@celo/wallet-base": "^3.0.1",
     "@celo/wallet-ledger": "^3.0.1",
-    "@cosmjs/amino": "^0.28.4",
-    "@cosmjs/crypto": "^0.26.5",
-    "@cosmjs/launchpad": "^0.26.5",
-    "@cosmjs/ledger-amino": "^0.26.5",
-    "@cosmjs/proto-signing": "^0.26.5",
-    "@cosmjs/stargate": "^0.26.5",
+    "@cosmjs/amino": "^0.28.13",
+    "@cosmjs/crypto": "^0.26.8",
+    "@cosmjs/launchpad": "^0.26.6",
+    "@cosmjs/ledger-amino": "^0.26.8",
+    "@cosmjs/proto-signing": "^0.26.8",
+    "@cosmjs/stargate": "^0.26.8",
     "@crypto-com/chain-jslib": "0.0.19",
     "@elrondnetwork/erdjs": "11.0.0",
     "@elrondnetwork/erdjs-network-providers": "^1.1.2",
@@ -278,6 +278,7 @@
     "jest-environment-jsdom": "28",
     "jest-file-snapshot": "^0.5.0",
     "long": "^4.0.0",
+    "mkdirp": "*",
     "prettier": "2.3.2",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
@@ -292,7 +293,6 @@
     "typescript": "^4.8.3",
     "typescript-eslint-parser": "^22.0.0",
     "uuid": "^8.3.2",
-    "ws": "7",
-    "mkdirp": "*"
+    "ws": "7"
   }
 }
