--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -175,7 +175,7 @@
     "algo-msgpack-with-bigint": "^2.1.1",
     "algosdk": "1.13.0",
     "async": "^3.2.3",
-    "avalanche": "^3.15.3",
+    "avalanche": "3.15.5",
     "axios": "0.26.1",
     "axios-retry": "^3.2.4",
     "base32-decode": "^1.0.0",
