--- a/tools/github-bot/package.json
+++ b/tools/github-bot/package.json
@@ -18,6 +18,7 @@
     "_test": "jest"
   },
   "dependencies": {
+    "@octokit/plugin-retry": "^4.1.1",
     "probot": "^12.2.2"
   },
   "devDependencies": {
