--- a/tools/actions/composites/checkout-merge/action.yml
+++ b/tools/actions/composites/checkout-merge/action.yml
@@ -33,5 +33,6 @@ runs:
         git config user.email "team-live@ledger.fr"
         git config user.name "live-github-bot[bot]"
         git fetch --prune --unshallow --no-tags || true
+        git checkout ${{ inputs.ref }}
         git checkout ${{ inputs.base }}
-        git merge origin/${{ inputs.ref }} --no-commit --no-ff
+        git merge ${{ inputs.ref }} --no-commit --no-ff
