fix: empty USER_ID on LLM

--- a/apps/ledger-live-desktop/tsconfig.json
+++ b/apps/ledger-live-desktop/tsconfig.json
@@ -17,7 +17,7 @@
     "sourceMap": true,
     "rootDir": "."
   },
-  "include": ["tests"],
+  "include": ["tests", "**/*.d.ts"],
   "files": ["package.json", "release-notes.json"],
   "exclude": [
     "node_modules",
